k8s/03-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: ciid-project
spec:
  clusterIP: None
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
