k8s/08-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ciid-project
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
